create a prototpye  in experiments

--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import HuggingFaceHub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +41,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,44 +54,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'function' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m KEY \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHUGGINGFACEHUB_API_TOKEN\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'function' object is not subscriptable"
-     ]
-    }
-   ],
    "source": [
-    "KEY = os.getenv[\"HUGGINGFACEHUB_API_TOKEN\"]"
+    "KEY = os.getenv(\"HUGGINGFACEHUB_API_TOKEN\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"google/byt5-small\"\n",
-    "model = HuggingFaceEndpoint(\n",
+    "model_name =\"google/flan-t5-large\"\n",
+    "llm = HuggingFaceHub(\n",
     "    repo_id=model_name,\n",
     "    huggingfacehub_api_token=KEY,\n",
-    "    temperature= 0\n",
+    "    model_kwargs={\"temperature\":0},\n",
+    "    \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model output: The population of India in 2010 was estimated to be 328,589,058.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a sample input to test the model\n",
+    "input_text = \"What is the population of india in detail\"\n",
+    "\n",
+    "# Generate and print the output using invoke\n",
+    "output = llm.invoke(input_text)\n",
+    "print(\"Model output:\", output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain, SequentialChain\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "import PyPDF2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (147061355.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[49], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    TEMPLATE =\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "TEMPLATE = \"\"\"\n",
+    "Text:{text}\n",
+    "You are an expert MCQ maker. Given the above text, it is your job to \\\n",
+    "create a quiz of {number} multiple choice question for {subject} students in {tone} tone.\n",
+    "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+    "Make re to format your response like RESPONSE_JSON below nad use it as a guide. \\\n",
+    "Ensure to make {number} MCQs\n",
+    "### RESPONSE_JSON\n",
+    "{response_json}\n",
+    "\"\"\""
    ]
   },
   {
